--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
 
 	<link rel="shortcut icon" href="img/favicon.ico.png" type="image/x-icon" />
 	
-	<link href='//fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Exo+2:400,600,700' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
-	
-	
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">	
-		
 	<link rel="stylesheet" href="css/app.css"> 
 	
   	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -34,8 +26,14 @@
     <![endif]-->
 	
 	<script id="_fed_an_js_tag" type="text/javascript" src="js/federated-analytics.all.min.js?agency=NASA&sub-agency=ARC&vcto=12"></script>
-		
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+	<script>
+	WebFont.load({
+		google: {
+		families: ['Inconsolata', 'Source Code Pro', 'Droid Sans Mono', 'Exo 2:400,600,700', 'Special Elite']
+		}
+	});
+	</script>
 </head>
 <body>
 	<div ng-view></div>
