small tweak on links: protocal part is removed from urls

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <![endif]-->
 
       <script id="_fed_an_js_tag" type="text/javascript" src="js/federated-analytics.all.min.js?agency=NASA&sub-agency=ARC&vcto=12"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
       <script>
       WebFont.load({
         google: {
