--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div ng-view></div>
-    <script src="public/bundle.min.js"></script>
+    <script src="public/bundle.min.js" async></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
     <script>
       WebFont.load({
@@ -25,6 +25,6 @@
         }
       });
     </script>
-    <script id="_fed_an_js_tag" type="text/javascript" src="js/federated-analytics.all.min.js?agency=NASA&sub-agency=ARC&vcto=12"></script>
+    <script id="_fed_an_js_tag" type="text/javascript" src="js/federated-analytics.all.min.js?agency=NASA&sub-agency=ARC&vcto=12" async></script>
   </body>
 </html>
