--- a/src/project.html
+++ b/src/project.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="shared-styles.html">
 
@@ -20,19 +21,67 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+
+      iron-list {
+        height: 500px;
+      }
     </style>
 
     <div class="card">
-      <div class="circle">1</div>
-      <paper-input label="Search code.nasa.gov"></paper-input>       
+      <input type="text" value="{{query::input}}">
 
-      <a href="/guide">Click here for guide to publishing open source!</a>
+      <p>
+        <a href="/guide">Click here for guide to publishing open source!</a>
+      </p>
     </div>
+
+    <iron-list items="[[matchedProjects]]">
+      <template>
+        <div class="card">
+          <h2>[[_getProperty(item, 'Software')]]</h2>
+          <a href$="[[_getProperty(item, 'External Link')]]">External Link</a>
+        </div>
+      </template>
+    </iron-list>
   </template>
 
   <script>
     Polymer({
-      is: 'my-view1'
+      is: 'my-view1',
+
+      properties: {
+        projects: Object,
+
+        matchedProjects: {
+          type: Object,
+          computed: '_computeMatchedProjects(projects, query)'
+        },
+
+        query: {
+          type: String,
+          value: ''
+        }
+      },
+
+      created: function() {
+        var xhr = new XMLHttpRequest();
+        xhr.addEventListener('load', this._loadProjects.bind(this));
+        xhr.open('GET', '/data/catalog.json');
+        xhr.send();
+      },
+
+      _loadProjects: function(e) {
+        this.projects = JSON.parse(e.target.responseText);
+      },
+
+      _getProperty: function(item, prop) {
+        return item[prop];
+      },
+
+      _computeMatchedProjects: function(projects, query) {
+        var regex = new RegExp(query, 'i');
+        return query ? projects.filter(function(p) { return !!regex.exec(p['Software']) }) : projects;
+      }
     });
   </script>
 </dom-module>
