--- a/src/my-app.html
+++ b/src/my-app.html
@@ -9,25 +9,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
-<link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="my-icons.html">
 
 <dom-module id="my-app">
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #555555;
         --app-secondary-color: black;
 
         display: block;
@@ -37,75 +30,43 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: #fff;
         background-color: var(--app-primary-color);
       }
-      app-header paper-icon-button {
-        --paper-icon-button-ink-color: white;
-      }
-
-      .drawer-list {
-        margin: 0 20px;
-      }
-
-      .drawer-list a {
-        display: block;
-
-        padding: 0 16px;
-
-        text-decoration: none;
-
-        color: var(--app-secondary-color);
-
-        line-height: 40px;
-      }
-
-      .drawer-list a.iron-selected {
-        color: black;
-
-        font-weight: bold;
-      }
-      
-      .tabs {
-        height: 100%;
-        @apply(--layout-horizontal);
-      }
       
       .tabs > a {
-        @apply(--layout-vertical);
-        @apply(--layout-center-center);
-        margin: 12px 16px 12px;
-      } 
+        margin: 12px;
+      }
     </style>
 
-    <app-location route="{{route}}"></app-location>
+    <app-location route="{{route}}" use-hash-as-path></app-location>
     <app-route
         route="{{route}}"
         pattern="/:page"
         data="{{routeData}}"
-        tail="{{subroute}}"></app-route>
+        query-params="{{queryParams}}"></app-route>
 
-    <app-drawer-layout fullbleed>
+    <!-- <app-drawer-layout fullbleed> -->
       <!-- Drawer content -->
       <!-- TODO: Only show the drawer on mobile -->
       <!--<app-drawer>
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="project" href="/project">Project</a>
+          <a name="projects" href="/projects">Projects</a>
           <a name="guide" href="/guide">Guide</a>
           <a name="share" href="/share">Share</a>
         </iron-selector>
       </app-drawer>-->
 
       <!-- Main content -->
-      <app-header-layout has-scrolling-region>
+      <app-header-layout>
 
-        <app-header condenses reveals effects="waterfall">
+        <app-header reveals shadow>
+          <app-toolbar class="tabs">
+            <a href="/#/">code.NASA</a>
+            <a href="/#/guide">Guide</a>
+            <a href="/#/share">Share</a>
+          </app-toolbar>
           <app-toolbar>
-            <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>NASA</div>
-              <iron-selector selected="[[page]]" attr-for-selected="name" class="tabs" role="navigation">
-                <a name="project" href="/project">Project</a>
-                <a name="guide" href="/guide">Guide</a>
-                <a name="share" href="/share">Share</a>
-              </iron-selector>
+            <label for="query">Search Projects:</label>
+            <input id="query" type="text" value="{{queryParams.q::input}}">
           </app-toolbar>
         </app-header>
 
@@ -114,19 +75,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <my-view1 name="project"></my-view1>
+          <my-view1 name="projects" query-params="{{queryParams}}"></my-view1>
           <my-view2 name="guide"></my-view2>
           <my-view3 name="share"></my-view3>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
 
-        <footer class="horizontal layout">
+        <footer>
           <div>NASA Officials: <a href="mailto:beth.beck@nasa.gov">Beth Beck</a> and <a href="mailto:jason.duley@nasa.gov">Jason Duley</a></div>
-          <div class="flex"></div>
           <div><a href="http://open.nasa.gov/">A NASA Open Government Initiative Website</a></div>
         </footer>
       </app-header-layout>
-    </app-drawer-layout>
+    <!-- </app-drawer-layout> -->
   </template>
 
   <script>
@@ -134,25 +94,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       is: 'my-app',
 
       properties: {
-        page: {
-          type: String,
-          reflectToAttribute: true,
-          observer: '_pageChanged'
-        }
+        queryParams: Object,
+
+        page: String,
       },
 
       observers: [
-        '_routePageChanged(routeData.page)'
+        '_routePageChanged(routeData.page)',
+        '_queryChanged(queryParams.q)'
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'project';
+        Polymer.AppLayout.scroll({ top: 0 });
+        this.page = page || 'projects';
+
+        // Load page import on demand. Show 404 page if fails
+        var resolvedPageUrl = this.resolveUrl(this.page + '.html');
+        this.importHref(resolvedPageUrl, null, this._showPage404, true);
       },
 
-      _pageChanged: function(page) {
-        // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl(page + '.html');
-        this.importHref(resolvedPageUrl, null, this._showPage404, true);
+      _queryChanged: function(query) {
+        if (query) this.set('routeData.page', '');
       },
 
       _showPage404: function() {
