Renaming; fix invalid page; less 2-way bindings; save search content

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="/src/code-nasa-app.html">
 
     <style>
       body {
@@ -103,6 +103,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <my-app></my-app>
+    <code-nasa-app></code-nasa-app>
   </body>
 </html>
