--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view2">
+<dom-module id="code-nasa-guide">
   <template>
     <style include="shared-styles">
       :host {
@@ -65,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script>
     Polymer({
-      is: 'my-view2',
+      is: 'code-nasa-guide',
 
       properties: {
         sras: Object
