--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view3">
+<dom-module id="code-nasa-share">
   <template>
     <style include="shared-styles">
       :host {
@@ -35,7 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script>
     Polymer({
-      is: 'my-view3'
+      is: 'code-nasa-share'
     });
   </script>
 </dom-module>
