--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="card">
+    <div class="section">
       <h1>Overview</h1>
       <p>
       Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C">NPR 2210.1C</a>.
@@ -37,7 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </p>
     </div>
 
-    <div class="card">
+    <div class="section">
       <h2>Center SRAs</h2>
       <div class="horizontal-scroll">
         <table>
