--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="card">
+    <div class="section">
       <h1>Share</h1>
       <p>
       Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
