--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -19,35 +19,82 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
       }
 
+      .splash {
+        margin: 20vh 0;
+        text-align: center;
+      }
+
+      #query {
+        padding-left: 30px;
+        background: url(data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22%3E%3Cg%3E%3Cpath d=%22M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z%22 fill=%22#DCDCDC%22%3E%3C/path%3E%3C/g%3E%3C/svg%3E) no-repeat;
+        border: none;
+        border-bottom: 1px solid #6A6E75;
+        outline: none;
+        font-size: 24px;
+        color: #DCDCDC;
+      }
+
+      #query:focus {
+        border-bottom: 1px solid #DCDCDC;
+      }
+
+      .meta {
+        color: #6A6E75;
+        font-style: italic;
+      }
+
+      h2 > span {
+        display: inline-block;
+        border: 1px solid #6A6E75;
+        padding: 0.5em;
+      }
+
       .tag {
-        background: #CCC;
+        margin-right: 0.5em;
       }
     </style>
 
-    <div class="card">
-      [[matchedProjects.length]] NASA Open Source Software [[_pluralize('Project', matchedProjects.length)]]
-      <template is="dom-if" if="[[queryParams.q]]">matching "[[queryParams.q]]"</template>
-      <template is="dom-if" if="[[queryParams.tag]]">tagged with <span class="tag">[[queryParams.tag]]</span></template>
-      <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]"><a href="/#/">Show all projects</a></template>
+    <div class="splash">
+      <h1>CODE.NASA.GOV</h1>
+      <input id="query" type="text" value="{{queryParams.q::input}}" title="Search Projects">
+    </div>
+
+    <div class="section">
+      <p class="meta">
+        [[matchedProjects.length]] NASA Open Source Software [[_pluralize('Project', matchedProjects.length)]]
+        <template is="dom-if" if="[[queryParams.q]]">
+          matching "[[queryParams.q]]"
+        </template>
+        <template is="dom-if" if="[[queryParams.tag]]">
+          tagged with #[[queryParams.tag]]
+        </template>
+        <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]">
+          <a href="/#/">Show all projects</a>
+        </template>
+      </p>
     </div>
 
     <iron-list items="[[matchedProjects]]" scroll-target="document">
       <template>
         <div>
-          <div class="card">
-            <h2>[[_getProperty(item, 'Software')]]</h2>
-            <a href$="[[_getProperty(item, 'External Link')]]">External Link</a>
-            <a href$="[[_getProperty(item, 'Public Code Repo')]]">Public Code Repo</a>
+          <div class="section">
+            <h2>
+              <span>[[_getProperty(item, 'Software')]]</span>
+            </h2>
+            <p>
+              <a href$="[[_getProperty(item, 'Public Code Repo')]]">[[_getProperty(item, 'Public Code Repo')]]</a>
+            </p>
             <p>[[item.Description]]</p>
-            License: 
-            <template is="dom-repeat" items="[[item.License]]" as="license">
-              <span>[[license]]</span>
-            </template>
-            <br>
-            Tags:
-            <template is="dom-repeat" items="[[item.Categories]]" as="tag">
-              <a href$="/?tag=[[tag]]" class="tag">[[tag]]</a>
-            </template>
+            <p>
+              <template is="dom-repeat" items="[[item.Categories]]" as="tag">
+                <a href$="/?tag=[[tag]]" class="tag">#[[tag]]</a>
+              </template>
+            </p>
+            <p>
+              <template is="dom-repeat" items="[[item.License]]" as="license">
+                <span>[[license]]</span>
+              </template>
+            </p>
           </div>
         </div>
       </template>
