--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -29,16 +29,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         text-decoration: underline;
       }
 
-      .section {
-        position: relative;
-        margin: 0 24px;
-        border-bottom: 1px solid #6A6E75;
-      }
-
-      .section p {
-        width: 100%;
-        overflow: hidden;
-        text-overflow: ellipsis;
+      .splash {
+        margin: 20vh 0;
+        text-align: center;
+        text-transform: uppercase;
       }
     </style>
   </template>
