--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -55,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           text-align: right;
         }
 
-        .step > p {
+        .step > .description {
           margin-left: 348px;
           border-left: 1px solid #6A6E75;
           padding-left: 48px;
@@ -70,25 +70,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="step">
       <div class="step-image"></div>
       <h2>1</h2>
-      <p>Lorem ipsum</p>
+      <p class="description">Lorem ipsum</p>
     </div>
 
     <div class="step">
       <div class="step-image"></div>
       <h2>2</h2>
-      <p>Lorem ipsum</p>
+      <p class="description">Lorem ipsum</p>
     </div>
 
     <div class="step">
       <div class="step-image"></div>
       <h2>3</h2>
-      <p>Lorem ipsum</p>
+      <p class="description">Lorem ipsum</p>
     </div>
 
     <div class="step">
       <div class="step-image"></div>
       <h2>Overview</h2>
-      <p>
+      <p class="description">
         Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C">NPR 2210.1C</a>.
         NPR 2210.1C establishes the roles, responsibilities, and
         procedures for reporting, reviewing, and releasing software under various conditions, including open source.
@@ -102,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="step">
       <div class="step-image"></div>
       <h2>SRAs</h2>
-      <p class="horizontal-scroll">
+      <div class="description horizontal-scroll">
         <table>
           <tr>
             <th>Center</th>
@@ -122,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
           </template>
         </table>
-      </p>
+      </div>
     </div>
   </template>
 
