--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .splash {
-        margin: 20vh 0;
+        margin: 20vw 0;
         text-align: center;
         text-transform: uppercase;
       }
